fix counter, align items

--- a/Resources/Public/Css/ausstello.css
+++ b/Resources/Public/Css/ausstello.css
@@ -37,8 +37,8 @@
 
 .filter-arrow {
   position: absolute;
-  left: 92%;
-  top: 10px;
+  right: 16px;
+  top: 12px;
   line-height: 1;
   z-index: 2;
   pointer-events: none;
@@ -46,16 +46,21 @@
 
 .counter {
   position: absolute;
-  left: 85%;
-  top: 13px;
+  right: 46px;
+  top: 10px;
   color: white;
   z-index: 2;
   pointer-events: none;
-  background-color: #aa3333;
+  background-color: #C0595F;
   border-radius: 50%;
   text-align: center;
-  width: 16px;
-  line-height: 1;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  font-weight: bold;
+}
+.counter:empty {
+  visibility: hidden;
 }
 
 .ausstello {
@@ -279,6 +284,9 @@
   font-weight: bold;
   cursor: pointer;
 }
+.ausstello-form-date.active input {
+  background-color: var(--ausstello-highlight-color);
+}
 .ausstello-form-date .input-group {
   position: relative;
   display: flex;
@@ -294,12 +302,12 @@
   pointer-events: none;
 }
 .ausstello-form-date input {
+  font-size: var(--ausstello-font-size-base);
   font-weight: 700;
   line-height: 1;
   border: 2px solid black;
-  padding: 12px 40px 12px 34px;
+  padding: 12px 40px 12px 38px;
   background-color: var(--ausstello-bg-color-light);
-  font-size: var(--ausstello-font-size-text-small);
   cursor: pointer;
   text-align: center;
 }
@@ -312,16 +320,18 @@
 }
 .ausstello-form-date label {
   z-index: 2;
-  top: 9px;
+  top: 10px;
   left: 10px;
   position: absolute;
   display: flex;
   align-items: center;
   line-height: 1;
   pointer-events: none;
-  gap: 12px;
-  margin-bottom: 15px;
+  gap: 4px;
   font-weight: bold;
+}
+.ausstello-form-date label img {
+  margin-right: 5px;
 }
 .ausstello-form-date :has(+ .air-datepicker) .ausstello-form-date-label-arrow {
   transform: rotate(90deg);
@@ -459,18 +469,17 @@
   position: relative;
   display: flex;
   align-items: stretch;
-  font-size: var(--ausstello-font-size-text-small);
   width: 100%;
   margin-bottom: 20px;
+}
+.ausstello-list-search-input:hover {
+  background-color: var(--ausstello-highlight-color);
 }
 .ausstello-list-search-input:hover .ausstello-list-search-input-btn {
   background-color: var(--ausstello-highlight-color);
 }
-.ausstello-list-search-input:hover .ausstello-list-search-input-form {
-  background-color: var(--ausstello-highlight-color);
-}
 .ausstello-list-search-input .ausstello-list-search-input-form {
-  font-size: var(--ausstello-font-size-text-small);
+  font-size: var(--ausstello-font-size-base);
 }
 .ausstello-list-search-input-icon {
   display: flex;
@@ -1253,6 +1262,11 @@ input:focus-visible {
   padding-top: 25px;
   width: fit-content;
 }
+@media (min-width: 992px) {
+  .ausstello-filter-reset {
+    margin-left: auto;
+  }
+}
 
 .d-flex {
   display: flex;
@@ -1268,6 +1282,10 @@ input:focus-visible {
 
 .align-items-center {
   align-items: center;
+}
+
+.align-items-end {
+  align-items: end;
 }
 
 .justify-content-center {
@@ -1310,6 +1328,9 @@ input:focus-visible {
   }
   .flex-lg-nowrap {
     flex-wrap: nowrap;
+  }
+  .align-items-lg-end {
+    align-items: end;
   }
 }
 /**
@@ -2901,14 +2922,14 @@ div.pswp__img--placeholder,
   --adp-mobile-width: 320px;
   --adp-mobile-day-cell-height: 38px;
   --adp-mobile-month-cell-height: 48px;
-  --adp-mobile-year-cell-height: 64px;
+  --adp-mobile-year-cell-height: 64px ;
 }
 
 .air-datepicker-overlay {
   --adp-overlay-background-color: rgba(0, 0, 0, .3);
   --adp-overlay-transition-duration: .3s;
   --adp-overlay-transition-ease: ease-out;
-  --adp-overlay-z-index: 99;
+  --adp-overlay-z-index: 99 ;
 }
 
 .air-datepicker {
